Module_10/demo_3/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: mongo-express-ingress 
spec: 
  rules:
    - host: mongo-exp.com
      http:
        paths:
          - pathType: Prefix 
            path: /
            backend: 
              service: 
                name: mongo-express-service
                port:
                  number: 8081
  ingressClassName: nginx
